Changed quiz to only hold the last 5 questions

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,7 +13,8 @@
     <h1><center><font color="White">Quizpedia</font></center></h1>
     <hr/>
     <center><font color="White" size="4">Create a question with 4 answers and check the right answer <br>
-        <i>See Quiz</i> will look at the collection of quizzes, <i>Save question</i> will save your question, and <i>Post</i> will do both!</font></center>
+        <i>See Quiz</i> will look at the collection of quizzes, <i>Save question</i> will save your question, and <i>Post</i> will do both!<br>
+        The quiz will contain the last 5 questions that users have uploaded to the database</font></center>
     <form ng-submit="addQuestion()" name="questionForm" ng-controller="QuizController">
       <input type="text" class="form-control input-lg" placeholder="Enter a question" ng-model="questionInput" />
           <div class = "radio">
