--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,8 +13,7 @@
     <h1><center><font color="White">Quizpedia</font></center></h1>
     <hr/>
     <center><font color="White" size="4">Create a question with 4 answers and check the right answer <br>
-        <i>See Quiz</i> will look at the collection of quizzes, <i>Save question</i> will save your question, and <i>Post</i> will do both!<br>
-        The quiz will contain the last 5 questions that users have uploaded to the database</font></center>
+        <i>See Quiz</i> will contain the last 5 questions that users have uploaded and <i>Save question</i> will save your question</font></center>
     <form ng-submit="addQuestion()" name="questionForm" ng-controller="QuizController">
       <input type="text" class="form-control input-lg" placeholder="Enter a question" ng-model="questionInput" />
           <div class = "radio">
@@ -33,7 +32,6 @@
                 <input type="radio" name="option" id="option4" value="option1">
                 <input type="text" class="form-control input-lg" placeholder="Quiz Answer4" ng-model="answer4Input" />
           </div>
-      <input class="button" type="submit" id="Posting" value="Post" style="float: right"  onclick="window.location='/quizQuestions/simonsQuiz' " onclick="addQuestion()"/>
       <input class="button" type="submit" id="post" value="See Quiz" style="float: right" onclick="window.location='/quizQuestions/simonsQuiz' " />
       <input class="button" type="submit" id="submit" value="Save question" style="float: right;" />
     </form>
