Fixed results error

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -14,7 +14,7 @@
     <hr/>
     <center><font color="White" size="4">Create a question with 4 answers and check the right answer <br>
         <i>See Quiz</i> will contain the last 5 questions that users have uploaded and <i>Save question</i> will save your question</font></center>
-    <form ng-submit="addQuestion()" name="questionForm" ng-controller="QuizController">
+    <form ng-submit="reset(); addQuestion()" name="questionForm" ng-controller="QuizController">
       <input type="text" class="form-control input-lg" placeholder="Enter a question" ng-model="questionInput" />
           <div class = "radio">
                 <input type="radio" name="option" id="option1" value="option1">
@@ -32,7 +32,7 @@
                 <input type="radio" name="option" id="option4" value="option1">
                 <input type="text" class="form-control input-lg" placeholder="Quiz Answer4" ng-model="answer4Input" />
           </div>
-      <input class="button" type="submit" id="post" value="See Quiz" style="float: right" onclick="window.location='/quizQuestions/simonsQuiz' " />
+      <input class="button" type="submit" id="post" value="See Quiz" style="float: right" ng-click="reset()" onclick="window.location='/quizQuestions/simonsQuiz' " />
       <input class="button" type="submit" id="submit" value="Save question" style="float: right;" />
     </form>
   </div>
