--- a/server/views/questionIndex.html
+++ b/server/views/questionIndex.html
@@ -38,7 +38,7 @@
                 </div>
               </form>
 		 </div>
-     <input class="button" type="submit" id="post" value="See Results" onclick="window.location='/quizQuestions/simonsQuiz/results';" />
+     <input class="button" type="submit" id="post" value="See Results" onclick="window.location='/quiz/results';" />
 	</div>
 
 
