Adding account to repository

--- a/server/views/index.html
+++ b/server/views/index.html
@@ -13,7 +13,7 @@
     <h1><center><font color="White">Quizpedia</font></center></h1>
     <hr/>
     <center><font color="White" size="4">Create a question with 4 answers and check the right answer <br>
-        <i>See Quiz</i> will contain the last 5 questions that users have uploaded and <i>Save question</i> will save your question</font></center>
+        <i>See Quiz</i> will contain the last 5 questions that users have uploaded into the database and <i>Save question</i> will save your question.</font></center>
     <form ng-submit="reset(); addQuestion()" name="questionForm" ng-controller="QuizController">
       <input type="text" class="form-control input-lg" placeholder="Enter a question" ng-model="questionInput" />
           <div class = "radio">
